Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31161

Error popup about failure to add files to git can be larger than the screen

XMLWordPrintable

    • macOS
    • 078f6df4d (master)

      It can be triggered by trying to add many files to a project at once using Add existing files.

      If Qt Creator failed to add files to git, it shows a large "Failed to add following files to version control (Git") popup and then lists all the files.

      If the number of files was large enough, it pushes the top and the bottom side out of screen which prevents the dialog to be read and closed properly.

        For Gerrit Dashboard: QTCREATORBUG-31161
        # Subject Branch Project Status CR V

            con Eike Ziller
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes