VCS: Improve dialog when files cannot be added

Avoid making the dialog larger than the screen.

Also remove the special handling for single files.

Fixes: QTCREATORBUG-31161
Change-Id: I5a85834505351493c51ee708c81527147d1a1270
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@qt.io>